Comment out all console logs after final check/revision to ensure Auth0 works as expected
