# server/swagger.yaml
@@ -1,16 +1,12 @@
 openapi: 3.0.0
 info:
-  title: Simple Auth & Dashboard Auth/Data API
-  description: Simple Auth & Dashboard is a demonstration web app which features user authentication and a simple dashboard displaying user sessions data. The app is created on the Next.js/Express frameworks and employs Auth0 for user authentication. All API calls are made via the Next.js '/api' routes to Auth0 or to the server's '/api/v1' end point, which require Auth0-issued access token to authenticate access. This documentation includes, besides app API, Auth0 API end points for access token (as necessary for access to app API) and for manual user sign-up with Auth0. It appears Auth0 requires user sign-up/login only via browser authentication flow.
+  title: Simple Auth & Dashboard Data API
+  description: Simple Auth & Dashboard is a demonstration web app which features user authentication and a simple dashboard displaying user session data. The app is created on the Next.js/Express frameworks and employs Auth0 for user authentication. The application uses Next.js API routes as proxies in making calls to Auth0, or to its own server's '/api/v1' end point, both of which require Auth0-issued access token to authenticate access. This documentation is of the application's own API, i.e., user and session data displayed in the dashboard. Please visit the [authentication](https://auth0.com/docs/api/authentication#introduction) and [management](https://auth0.com/docs/api/management/v2#introduction) documentations for Auth0 APIs.
   contact:
     name: Chung Kao
     email: chungckao@gmail.com
   version: "1.0"
 servers:
-  - url: http://localhost:3000/api
-    description: development BaseUrl
-  - url: https://simple-auth-and-dashboard.vercel.app/api
-    description: poduction BaseUrl
   - url: http://localhost:3001/api/v1
     description: development ApiUrl
   - url: https://simpleauthanddashboard.onrender.com/api/v1
@@ -20,60 +16,6 @@ servers:
   - url: https://simeple-auth-and-dashboard.jp.auth0.com
     description: production Auth0Url
 paths:
-  /auth/sign-up:
-    get:
-      tags:
-        - Auth
-      summary: Get Sign-up Interface
-      operationId: GetSignupInterface
-      description: Call to initiate authentication and for redirection to sign-up interface
-      parameters: []
-      responses:
-        "200":
-          description: Success - redirect to Auth0 sign-up page
-          headers: {}
-          content:
-            text/html:
-              shcema:
-                type: html
-      deprecated: false
-      security: []
-  /auth/login:
-    get:
-      tags:
-        - Auth
-      summary: Get Login Interface
-      operationId: GetLoginInterface
-      description: Call to initiate authentication and for redirection to login interface
-      parameters: []
-      responses:
-        "200":
-          description: Success - redirect to Auth0 login page
-          headers: {}
-          content:
-            text/html:
-              shcema:
-                type: html
-      deprecated: false
-      security: []
-  /auth/logout:
-    get:
-      tags:
-        - Auth
-      summary: Log Out User
-      operationId: LogOutUser
-      description: Call to log out user and redirect to application login page
-      parameters: []
-      responses:
-        "200":
-          description: Success - redirect to application logged out URL
-          headers: {}
-          content:
-            text/html:
-              shcema:
-                type: html
-      deprecated: false
-      security: []
   /oauth/token:
     post:
       tags:
@@ -108,41 +50,6 @@ paths:
                 token_type: Bearer
       deprecated: false
       security: []
-  /dbconnections/signup:
-    post:
-      tags:
-        - Auth0
-      summary: Sign Up User
-      operationId: SignUpUser
-      description: Sign up user with Auth0. Accepts only `Username-Password-Authentication` connection. The user manually signed up this way will not be added to the application database and will need to be manually added in there.
-      parameters: []
-      requestBody:
-        description: `client_id`, `email`, `password` and `connection` are required
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/SignUpUserRequest"
-            example:
-              client_id: CLIENT_ID
-              email: myemail@gmail.com
-              password: UpLowCharNumSym@
-              connection: Username-Password-Authentication
-        required: true
-      responses:
-        "200":
-          description: User created (on Auth0)
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/SignUpUserResponse"
-              example:
-                _id: auth0|58457fe6b27...
-                email_verified: false
-                email: myemail@gmail.com
-                app_metadata: {}
-                user_metadata: {}
-      deprecated: false
-      security: []
   /users:
     post:
       tags:
@@ -152,7 +59,7 @@ paths:
       description: Create a new user
       parameters: []
       requestBody:
-        description: `auth0_id`, `profile_name`, `email`, `created_at`, and `logins_count` are required and `profile_name` and `email` must be unique
+        description: `auth0_id`, `profile_name`, `email`, `created_at`, and `logins_count` are required and `auth0_id` is unique
         content:
           application/json:
             schema:
@@ -228,7 +135,7 @@ paths:
         - Users
       summary: Get Single User
       operationId: GetSingleUser
-      description: Get one user by Auth0 ID
+      description: Get one user by Auth0 ID - **Not in Use**
       parameters:
         - name: id
           in: path
@@ -304,7 +211,7 @@ paths:
         - Users
       summary: Delete User
       operationId: DeleteUser
-      description: For admin only - delete one user by Auth0 ID
+      description: Delete one user by Auth0 ID and cascade delete all sessions recorded for this user - **Not in Use**
       parameters:
         - name: id
           in: path
@@ -381,7 +288,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/GetAllSessionsResponse"
+                $ref: "#/components/schemas/GetWeekSessionsResponse"
               example:
                 sessions:
                   - id: 5
@@ -401,9 +308,40 @@ paths:
       - in: path
         name: id
         schema:
-          type: string
+          type: number
         required: true
         description: The session ID
+    get:
+      tags:
+        - Sessions
+      summary: Get Single Session
+      operationId: GetSingleSession
+      description: Get one session by session ID - **Not in Use**
+      parameters:
+        - name: id
+          in: path
+          description: The session ID
+          required: true
+          style: simple
+          schema:
+            type: number
+            example: 13
+      responses:
+        "200":
+          description: OK - returns the session
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetSingleSessionResponse"
+              example:
+                session:
+                  id: 13
+                  auth0_id: auth0|123456789101213
+                  session_start: 2023-01-24T19:35:56.123Z
+                  session_end: 2023-01-24T12:10:24.781Z
+      deprecated: false
+      security:
+        - bearer: []
     patch:
       tags:
         - Sessions
@@ -445,50 +383,40 @@ paths:
       deprecated: false
       security:
         - bearer: []
+    delete:
+      tags:
+        - Sessions
+      summary: Delete Session
+      operationId: DeleteSession
+      description: Delete one user by Auth0 ID - **Not in Use**
+      parameters:
+        - name: id
+          in: path
+          description: The session ID
+          required: true
+          style: simple
+          schema:
+            type: number
+            example: 13
+      responses:
+        "200":
+          description: OK - returns the deleted session
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DeleteSessionResponse"
+              example:
+                msg: Session was removed successfully
+                session:
+                  id: 5
+                  auth0_id: auth0|123456789101213
+                  session_start: 2023-01-23T00:00:01.001Z
+                  session_end: 2023-01-24T12:10:24.781Z
+      deprecated: false
+      security:
+        - bearer: []
 components:
   schemas:
-    SignUpUserRequest:
-      title: SignupUserRequest
-      required:
-        - clent_id
-        - email
-        - password
-        - connection
-      type: object
-      properties:
-        client_id:
-          type: string
-          description: Auth0 client ID
-        email:
-          type: string
-        password:
-          type: string
-        connection:
-          type: string
-      example:
-        client_id: myAuth0HashClientId
-        email: myemail@gmail.com
-        password: Tomars@123?
-        connection: Username-Password-Authentication
-    SignUpUserResponse:
-      title: SignUpUserResponse
-      type: object
-      properties:
-        _id:
-          type: string
-          description: Auth0 user ID
-        email_verified:
-          type: boolean
-        email:
-          type: string
-        username:
-          type: string
-      example:
-        _id: auth0|58457fe6b27...
-        email_verified: false
-        email: myemail@gmail.com
-        app_metadata: {}
-        user_metadata: {}
     GetAccessTokenRequest:
       title: GetAccessTokenRequest
       required:
@@ -767,7 +695,7 @@ components:
       example:
         msg: Session was created successfully
         session:
-          id: 5
+          id: 13
           auth0_id: auth0|123456789101213
           session_start: 2023-01-23T00:00:01.001Z
           session_end: --
@@ -792,15 +720,36 @@ components:
           type: number
       example:
         sessions:
-          - id: 5
-            auth0_id: auth0|123456789101213
-            session_start: 2023-01-23T00:00:01.001Z
-            session_end: 2023-01-24T12:10:24.781Z
           - id: 6
             auth0_id: facebook|123456789111213
             session_start: 2023-01-24T19:35:56.123Z
             session_end: --
+          - id: 5
+            auth0_id: auth0|123456789101213
+            session_start: 2023-01-23T00:00:01.001Z
+            session_end: 2023-01-24T12:10:24.781Z
         count: 2
+    GetSingleSessionResponse:
+      title: GetSingleSessionResponse
+      type: object
+      properties:
+        session:
+          type: object
+          properties:
+            id:
+              type: number
+            auth0_id:
+              type: string
+            session_start:
+              type: string
+            session_end:
+              type: string
+      example:
+        session:
+          id: 13
+          auth0_id: auth0|123456789101213
+          session_start: 2023-01-23T00:00:01.001Z
+          session_end: 2023-01-24T12:10:24.781Z
     UpdateSessionRequest:
       title: UpdateSessionRequest
       required:
@@ -831,20 +780,42 @@ components:
       example:
         msg: Session was updated successfully
         session:
-          id: 5
+          id: 13
           auth0_id: auth0|123456789101213
           session_start: 2023-01-23T00:00:01.001Z
           session_end: 2023-01-24T19:35:56.123Z
+    DeleteSessionResponse:
+      title: DeleteSessionResponse
+      type: object
+      properties:
+        msg:
+          type: string
+        session:
+          type: object
+          properties:
+            id:
+              type: number
+            auth0_id:
+              type: string
+            session_start:
+              type: string
+            session_end:
+              type: string
+      example:
+        msg: Session was deleted successly
+        session:
+          id: 13
+          auth0_id: auth0|123456789101213
+          session_start: 2023-01-23T00:00:01.001Z
+          session_end: 2023-01-24T12:10:24.781Z
   securitySchemes:
     bearer:
       type: http
       scheme: bearer
 security: []
 tags:
-  - name: Auth
-    description: Initiate/Exit authentication - Use BaseUrl as the base URL
   - name: Auth0
-    description: Auth0 access token & manual sign-up - Use Auth0Url as the base URL
+    description: Get Auth0 access token - Use Auth0Url as the base URL
   - name: Users
     description: CRUD operations on user data - Use ApiUrl as the base URL
   - name: Sessions
